build/log/idf_py_stderr_output_6618
Command: make -j 6 all
/home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c: In function 'echo_task':
/home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c:51:34: error: pointer targets in passing argument 1 of 'strlen' differ in signedness [-Werror=pointer-sign]
   51 |       strncpy(buff, data, strlen(data));
      |                                  ^~~~
      |                                  |
      |                                  uint8_t * {aka unsigned char *}
In file included from /home/tathuan/esp-idf/components/log/include/esp_log_args.h:10,
                 from /home/tathuan/esp-idf/components/log/include/esp_log.h:21,
                 from /home/tathuan/esp-idf/components/esp_common/include/esp_check.h:9,
                 from /home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c:8:
/home/tathuan/.espressif/tools/riscv32-esp-elf/esp-15.2.0_20251204/riscv32-esp-elf/picolibc/include/string.h:162:18: note: expected 'const char *' but argument is of type 'uint8_t *' {aka 'unsigned char *'}
  162 | size_t   strlen (const char *);
      |                  ^~~~~~~~~~~~
/home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c:51:21: error: pointer targets in passing argument 2 of 'strncpy' differ in signedness [-Werror=pointer-sign]
   51 |       strncpy(buff, data, strlen(data));
      |                     ^~~~
      |                     |
      |                     uint8_t * {aka unsigned char *}
/home/tathuan/.espressif/tools/riscv32-esp-elf/esp-15.2.0_20251204/riscv32-esp-elf/picolibc/include/string.h:171:37: note: expected 'const char * restrict' but argument is of type 'uint8_t *' {aka 'unsigned char *'}
  171 | char    *strncpy (char *__restrict, const char *__restrict, size_t);
      |                                     ^
/home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c:52:16: error: comparison with string literal results in unspecified behavior [-Werror=address]
   52 |       if (buff == "IDLE") {
      |                ^~
/home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c:54:23: error: comparison with string literal results in unspecified behavior [-Werror=address]
   54 |       } else if (buff == "START") {
      |                       ^~
/home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c:56:23: error: comparison with string literal results in unspecified behavior [-Werror=address]
   56 |       } else if (buff == "RUN") {
      |                       ^~
/home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c:58:23: error: comparison with string literal results in unspecified behavior [-Werror=address]
   58 |       } else if (buff == "STOP") {
      |                       ^~
cc1: all warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/usb_serial_echo_main.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:4813: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
